Merge with default