@@ -5,7 +5,7 @@
     <groupId>com.zuehlke</groupId>
     <artifactId>pgadmissions</artifactId>
     <packaging>war</packaging>
-    <version>2.5.0-SNAPSHOT</version>
+    <version>2.6.0-SNAPSHOT</version>
 
     <properties>
         <spring.version>3.1.0.RELEASE</spring.version>
@@ -446,9 +446,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.13</version>
                 <configuration>
-                    <argLine>-Xms1024m -Xmx2048m</argLine>
+                    <argLine>-Xms1024m -Xmx2048m -XX:MaxPermSize=512m</argLine>
                     <disableXmlReport>false</disableXmlReport>
-                    <redirectTestOutputToFile>false</redirectTestOutputToFile>
+                    <redirectTestOutputToFile>false</redirectTestOutputToFile> 
                 </configuration>
             </plugin>
             <plugin>
